--- a/Addition&Subtraction.ipynb
+++ b/Addition&Subtraction.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Parameters Config"
+    "## Parameters Config"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Generation"
+    "## Data Generation"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Processing"
+    "## Processing"
    ]
   },
   {
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build Model"
+    "## Build Model"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training"
+    "## Training"
    ]
   },
   {
@@ -2866,7 +2866,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing"
+    "## Testing"
    ]
   },
   {
